--- a/ios/LogIn/LogInViewController.xib
+++ b/ios/LogIn/LogInViewController.xib
@@ -18,18 +18,21 @@
             <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="zuP-yV-q2k" userLabel="FixView">
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zuP-yV-q2k" userLabel="FixView">
                     <rect key="frame" x="0.0" y="44" width="414" height="50"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <color key="backgroundColor" systemColor="systemPinkColor" red="1" green="0.1764705882" blue="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                </view>
-                <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="hr9-J2-Cv1">
-                    <rect key="frame" x="0.0" y="93" width="414" height="793"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    <color key="backgroundColor" systemColor="systemYellowColor" red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <constraints>
+                        <constraint firstAttribute="width" secondItem="zuP-yV-q2k" secondAttribute="height" multiplier="207:25" id="BNM-Gl-6ZN"/>
+                        <constraint firstAttribute="height" constant="50" id="FJB-6z-o6s"/>
+                    </constraints>
                 </view>
             </subviews>
             <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+            <constraints>
+                <constraint firstItem="zuP-yV-q2k" firstAttribute="trailing" secondItem="fnl-2z-Ty3" secondAttribute="trailing" id="LLI-Xk-ruU"/>
+                <constraint firstItem="zuP-yV-q2k" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="TaA-V7-nvW"/>
+                <constraint firstItem="zuP-yV-q2k" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="b7M-oK-3Qt"/>
+            </constraints>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <point key="canvasLocation" x="137.68115942028987" y="152.67857142857142"/>
         </view>
