--- a/ios/LogIn/LogInViewController.xib
+++ b/ios/LogIn/LogInViewController.xib
@@ -10,6 +10,12 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="LogInViewController" customModule="ios" customModuleProvider="target">
             <connections>
+                <outlet property="detailInfo" destination="OBc-w3-aQ0" id="D4L-tl-9JJ"/>
+                <outlet property="fixTopView" destination="zuP-yV-q2k" id="ZWG-AG-pim"/>
+                <outlet property="grayView" destination="CqE-WP-njl" id="0ZW-xF-eb4"/>
+                <outlet property="loginFiled" destination="zT6-jf-rVu" id="H3d-F4-y7G"/>
+                <outlet property="mainScrollView" destination="agz-uA-dHq" id="TqG-k2-ZFt"/>
+                <outlet property="secondTopView" destination="rC4-4F-54s" id="AyF-C2-UU5"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -20,16 +26,130 @@
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zuP-yV-q2k" userLabel="FixView">
                     <rect key="frame" x="0.0" y="44" width="414" height="50"/>
+                    <subviews>
+                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="cgv_white" adjustsImageSizeForAccessibilityContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="SGq-Kk-P9L">
+                            <rect key="frame" x="20" y="5" width="52" height="40"/>
+                            <constraints>
+                                <constraint firstAttribute="width" secondItem="SGq-Kk-P9L" secondAttribute="height" multiplier="13:10" id="3ca-MO-uQU"/>
+                                <constraint firstAttribute="height" constant="40" id="b6H-q5-Nvq"/>
+                                <constraint firstAttribute="width" constant="52" id="d7b-zo-s8m"/>
+                            </constraints>
+                        </imageView>
+                    </subviews>
                     <color key="backgroundColor" systemColor="systemPinkColor" red="1" green="0.1764705882" blue="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
+                        <constraint firstItem="SGq-Kk-P9L" firstAttribute="centerY" secondItem="zuP-yV-q2k" secondAttribute="centerY" id="5e7-ys-fz9"/>
                         <constraint firstAttribute="width" secondItem="zuP-yV-q2k" secondAttribute="height" multiplier="207:25" id="BNM-Gl-6ZN"/>
                         <constraint firstAttribute="height" constant="50" id="FJB-6z-o6s"/>
+                        <constraint firstItem="SGq-Kk-P9L" firstAttribute="leading" secondItem="zuP-yV-q2k" secondAttribute="leading" constant="20" id="QSF-fK-66x"/>
                     </constraints>
+                </view>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gmZ-C7-noY">
+                    <rect key="frame" x="0.0" y="93" width="414" height="803"/>
+                    <subviews>
+                        <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="agz-uA-dHq">
+                            <rect key="frame" x="0.0" y="0.0" width="414" height="795"/>
+                            <subviews>
+                                <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="CqE-WP-njl" userLabel="grayview">
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="775"/>
+                                    <subviews>
+                                        <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="rC4-4F-54s" userLabel="redview">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="100"/>
+                                            <subviews>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zT6-jf-rVu" userLabel="loginfield">
+                                                    <rect key="frame" x="20" y="0.0" width="325" height="155"/>
+                                                    <subviews>
+                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="nologinpf" translatesAutoresizingMaskIntoConstraints="NO" id="YSw-yn-eE2">
+                                                            <rect key="frame" x="21" y="21" width="60" height="60"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="width" secondItem="YSw-yn-eE2" secondAttribute="height" multiplier="1:1" id="XWZ-Lr-dL7"/>
+                                                                <constraint firstAttribute="width" constant="60" id="jCA-4Z-H7Q"/>
+                                                                <constraint firstAttribute="height" constant="60" id="r8i-aR-80F"/>
+                                                            </constraints>
+                                                        </imageView>
+                                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EEA-Lv-fQQ">
+                                                            <rect key="frame" x="101" y="36" width="123" height="30"/>
+                                                            <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                                            <state key="normal" title="로그인을 해주세요 &gt;">
+                                                                <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                            </state>
+                                                        </button>
+                                                        <stackView opaque="NO" contentMode="scaleToFill" spacing="25" translatesAutoresizingMaskIntoConstraints="NO" id="OBc-w3-aQ0" userLabel="myDetailInfo">
+                                                            <rect key="frame" x="16" y="112" width="293" height="30"/>
+                                                            <subviews>
+                                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Vh7-cW-M1i">
+                                                                    <rect key="frame" x="0.0" y="0.0" width="92" height="30"/>
+                                                                    <state key="normal" title="스마트영수증 &gt;">
+                                                                        <color key="titleColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                                    </state>
+                                                                </button>
+                                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VXJ-Ow-1W4">
+                                                                    <rect key="frame" x="117" y="0.0" width="79" height="30"/>
+                                                                    <state key="normal" title="기프트카드 &gt;">
+                                                                        <color key="titleColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                                    </state>
+                                                                </button>
+                                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VGp-f6-Wrp">
+                                                                    <rect key="frame" x="221" y="0.0" width="72" height="30"/>
+                                                                    <state key="normal" title="MY CGV &gt;">
+                                                                        <color key="titleColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                                    </state>
+                                                                </button>
+                                                            </subviews>
+                                                        </stackView>
+                                                    </subviews>
+                                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <constraints>
+                                                        <constraint firstItem="EEA-Lv-fQQ" firstAttribute="centerX" secondItem="OBc-w3-aQ0" secondAttribute="centerX" id="3Dm-Ym-0dn"/>
+                                                        <constraint firstAttribute="width" secondItem="zT6-jf-rVu" secondAttribute="height" multiplier="65:31" id="6ad-Bj-WnJ"/>
+                                                        <constraint firstItem="EEA-Lv-fQQ" firstAttribute="centerY" secondItem="YSw-yn-eE2" secondAttribute="centerY" id="At4-Ie-nVl"/>
+                                                        <constraint firstItem="OBc-w3-aQ0" firstAttribute="centerX" secondItem="zT6-jf-rVu" secondAttribute="centerX" id="Pgr-0j-Ctv"/>
+                                                        <constraint firstAttribute="height" constant="155" id="SC6-Zc-bIt"/>
+                                                        <constraint firstItem="YSw-yn-eE2" firstAttribute="leading" secondItem="zT6-jf-rVu" secondAttribute="leading" constant="21" id="ae9-4j-Juc"/>
+                                                        <constraint firstAttribute="bottom" secondItem="OBc-w3-aQ0" secondAttribute="bottom" constant="13" id="eGX-ha-i46"/>
+                                                        <constraint firstItem="YSw-yn-eE2" firstAttribute="top" secondItem="zT6-jf-rVu" secondAttribute="top" constant="21" id="fSr-gy-vA7"/>
+                                                        <constraint firstAttribute="width" constant="325" id="oAc-PP-nGk"/>
+                                                        <constraint firstItem="EEA-Lv-fQQ" firstAttribute="leading" secondItem="YSw-yn-eE2" secondAttribute="trailing" constant="20" id="qap-ts-Q7K"/>
+                                                        <constraint firstAttribute="bottom" secondItem="YSw-yn-eE2" secondAttribute="bottom" constant="74" id="qfm-H5-cwO"/>
+                                                    </constraints>
+                                                </view>
+                                            </subviews>
+                                            <color key="backgroundColor" systemColor="systemPinkColor" red="1" green="0.1764705882" blue="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                            <constraints>
+                                                <constraint firstItem="zT6-jf-rVu" firstAttribute="top" secondItem="rC4-4F-54s" secondAttribute="top" id="32l-4M-u14"/>
+                                                <constraint firstAttribute="height" constant="100" id="GAa-JX-Ifh"/>
+                                                <constraint firstItem="zT6-jf-rVu" firstAttribute="leading" secondItem="rC4-4F-54s" secondAttribute="leading" constant="20" id="gH8-bQ-TQB"/>
+                                            </constraints>
+                                        </view>
+                                    </subviews>
+                                    <color key="backgroundColor" systemColor="systemGray3Color" red="0.78039215689999997" green="0.78039215689999997" blue="0.80000000000000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    <constraints>
+                                        <constraint firstItem="rC4-4F-54s" firstAttribute="centerX" secondItem="CqE-WP-njl" secondAttribute="centerX" id="23a-WO-zLp"/>
+                                        <constraint firstAttribute="height" constant="775" id="Gyb-Jm-PnQ"/>
+                                        <constraint firstItem="rC4-4F-54s" firstAttribute="leading" secondItem="CqE-WP-njl" secondAttribute="leading" id="o75-5K-3i6"/>
+                                        <constraint firstItem="rC4-4F-54s" firstAttribute="top" secondItem="CqE-WP-njl" secondAttribute="top" id="qtz-BL-fJT"/>
+                                    </constraints>
+                                </view>
+                            </subviews>
+                            <constraints>
+                                <constraint firstAttribute="trailing" secondItem="CqE-WP-njl" secondAttribute="trailing" id="BuW-pH-VKx"/>
+                                <constraint firstAttribute="bottom" secondItem="CqE-WP-njl" secondAttribute="bottom" constant="20" id="F2H-O6-h21"/>
+                                <constraint firstItem="CqE-WP-njl" firstAttribute="leading" secondItem="agz-uA-dHq" secondAttribute="leading" id="Ueq-jX-bm7"/>
+                                <constraint firstItem="CqE-WP-njl" firstAttribute="top" secondItem="agz-uA-dHq" secondAttribute="top" id="fIM-6P-hIA"/>
+                                <constraint firstItem="CqE-WP-njl" firstAttribute="centerX" secondItem="agz-uA-dHq" secondAttribute="centerX" id="txv-Et-fze"/>
+                            </constraints>
+                        </scrollView>
+                    </subviews>
+                    <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                 </view>
             </subviews>
             <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
             <constraints>
+                <constraint firstItem="gmZ-C7-noY" firstAttribute="leading" secondItem="zuP-yV-q2k" secondAttribute="leading" id="3HK-EB-E8I"/>
+                <constraint firstItem="gmZ-C7-noY" firstAttribute="trailing" secondItem="zuP-yV-q2k" secondAttribute="trailing" id="Dtw-qR-KGJ"/>
+                <constraint firstAttribute="bottom" secondItem="gmZ-C7-noY" secondAttribute="bottom" id="GIc-zV-6rR"/>
                 <constraint firstItem="zuP-yV-q2k" firstAttribute="trailing" secondItem="fnl-2z-Ty3" secondAttribute="trailing" id="LLI-Xk-ruU"/>
+                <constraint firstItem="gmZ-C7-noY" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="49" id="Re8-rw-l9o"/>
                 <constraint firstItem="zuP-yV-q2k" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="TaA-V7-nvW"/>
                 <constraint firstItem="zuP-yV-q2k" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="b7M-oK-3Qt"/>
             </constraints>
@@ -37,4 +157,8 @@
             <point key="canvasLocation" x="137.68115942028987" y="152.67857142857142"/>
         </view>
     </objects>
+    <resources>
+        <image name="cgv_white" width="93" height="40"/>
+        <image name="nologinpf" width="82" height="81"/>
+    </resources>
 </document>
