--- a/ios/LogInMenu/LogInMenuViewController.xib
+++ b/ios/LogInMenu/LogInMenuViewController.xib
@@ -8,7 +8,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="LogInViewController" customModule="ios" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="LogInMenuViewController" customModule="ios" customModuleProvider="target">
             <connections>
                 <outlet property="detailInfo" destination="OBc-w3-aQ0" id="D4L-tl-9JJ"/>
                 <outlet property="fastO" destination="BPK-iw-eHR" id="2XQ-oz-sIp"/>
