--- a/ios/LogInMenu/LogInMenuViewController.xib
+++ b/ios/LogInMenu/LogInMenuViewController.xib
@@ -17,7 +17,6 @@
                 <outlet property="loginFiled" destination="zT6-jf-rVu" id="H3d-F4-y7G"/>
                 <outlet property="mainScrollView" destination="agz-uA-dHq" id="TqG-k2-ZFt"/>
                 <outlet property="movieR" destination="kM0-AA-s54" id="7dY-EO-NQ5"/>
-                <outlet property="photoT" destination="aW7-I7-SMb" id="1Hi-xd-PRC"/>
                 <outlet property="secondTopView" destination="rC4-4F-54s" id="AyF-C2-UU5"/>
                 <outlet property="theaterR" destination="QUY-b7-dvT" id="XBG-Mv-6ex"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
@@ -55,7 +54,7 @@
                             <rect key="frame" x="0.0" y="0.0" width="414" height="795"/>
                             <subviews>
                                 <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="CqE-WP-njl" userLabel="grayview">
-                                    <rect key="frame" x="0.0" y="0.0" width="414" height="775"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="3000"/>
                                     <subviews>
                                         <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="rC4-4F-54s" userLabel="redview">
                                             <rect key="frame" x="0.0" y="0.0" width="414" height="100"/>
@@ -77,6 +76,9 @@
                                                             <state key="normal" title="로그인을 해주세요 &gt;">
                                                                 <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                             </state>
+                                                            <connections>
+                                                                <action selector="pressLogin:" destination="-1" eventType="touchUpInside" id="ph5-GT-PGF"/>
+                                                            </connections>
                                                         </button>
                                                         <stackView opaque="NO" contentMode="scaleToFill" spacing="25" translatesAutoresizingMaskIntoConstraints="NO" id="OBc-w3-aQ0" userLabel="myDetailInfo">
                                                             <rect key="frame" x="16" y="112" width="293" height="30"/>
@@ -128,7 +130,7 @@
                                         <stackView opaque="NO" contentMode="scaleToFill" spacing="24" translatesAutoresizingMaskIntoConstraints="NO" id="tQ5-s7-yza">
                                             <rect key="frame" x="26" y="188" width="315" height="81"/>
                                             <subviews>
-                                                <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" axis="vertical" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="kM0-AA-s54">
+                                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="kM0-AA-s54">
                                                     <rect key="frame" x="0.0" y="0.0" width="61" height="81"/>
                                                     <subviews>
                                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" image="movie_reser" translatesAutoresizingMaskIntoConstraints="NO" id="pDK-Ak-V5g">
@@ -142,7 +144,7 @@
                                                         </label>
                                                     </subviews>
                                                 </stackView>
-                                                <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" axis="vertical" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="QUY-b7-dvT">
+                                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="QUY-b7-dvT">
                                                     <rect key="frame" x="85" y="0.0" width="61" height="81"/>
                                                     <subviews>
                                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" image="theater" translatesAutoresizingMaskIntoConstraints="NO" id="RPr-Sg-Wnp">
@@ -156,13 +158,13 @@
                                                         </label>
                                                     </subviews>
                                                 </stackView>
-                                                <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" axis="vertical" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="BPK-iw-eHR">
+                                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="8Ia-an-DI7">
                                                     <rect key="frame" x="170" y="0.0" width="61" height="81"/>
                                                     <subviews>
-                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" image="fastorder" translatesAutoresizingMaskIntoConstraints="NO" id="s3D-54-1pr">
+                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" image="fastorder" translatesAutoresizingMaskIntoConstraints="NO" id="m7p-ND-0sR">
                                                             <rect key="frame" x="0.0" y="0.0" width="61" height="59"/>
                                                         </imageView>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="패스트오더" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="q3X-bc-07k">
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="패스트오더" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PP9-Px-9Qw">
                                                             <rect key="frame" x="0.0" y="64" width="61" height="17"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                             <nil key="textColor"/>
@@ -170,18 +172,17 @@
                                                         </label>
                                                     </subviews>
                                                 </stackView>
-                                                <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" axis="vertical" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="aW7-I7-SMb">
+                                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="BPK-iw-eHR">
                                                     <rect key="frame" x="255" y="0.0" width="60" height="81"/>
                                                     <subviews>
-                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" image="phototicket" translatesAutoresizingMaskIntoConstraints="NO" id="Add-ra-WOb">
-                                                            <rect key="frame" x="0.0" y="0.0" width="60" height="59"/>
-                                                        </imageView>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="포토티켓" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nba-Bb-cAy">
-                                                            <rect key="frame" x="0.0" y="64" width="60" height="17"/>
-                                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                                            <nil key="textColor"/>
-                                                            <nil key="highlightedColor"/>
-                                                        </label>
+                                                        <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ayn-Yy-b5u">
+                                                            <rect key="frame" x="0.0" y="0.0" width="60" height="30"/>
+                                                            <state key="normal" title="Button"/>
+                                                        </button>
+                                                        <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vCG-gj-jIL">
+                                                            <rect key="frame" x="0.0" y="35" width="60" height="46"/>
+                                                            <state key="normal" title="Button"/>
+                                                        </button>
                                                     </subviews>
                                                 </stackView>
                                             </subviews>
@@ -195,7 +196,7 @@
                                     <constraints>
                                         <constraint firstItem="tQ5-s7-yza" firstAttribute="width" secondItem="zT6-jf-rVu" secondAttribute="width" multiplier="0.969231" id="1V3-kD-can"/>
                                         <constraint firstItem="rC4-4F-54s" firstAttribute="centerX" secondItem="CqE-WP-njl" secondAttribute="centerX" id="23a-WO-zLp"/>
-                                        <constraint firstAttribute="height" constant="775" id="Gyb-Jm-PnQ"/>
+                                        <constraint firstAttribute="height" constant="3000" id="Gyb-Jm-PnQ"/>
                                         <constraint firstItem="tQ5-s7-yza" firstAttribute="leading" secondItem="zT6-jf-rVu" secondAttribute="trailing" constant="-319" id="NX1-X4-iPV"/>
                                         <constraint firstItem="tQ5-s7-yza" firstAttribute="top" secondItem="rC4-4F-54s" secondAttribute="bottom" constant="88" id="doS-tc-wRp"/>
                                         <constraint firstItem="rC4-4F-54s" firstAttribute="leading" secondItem="CqE-WP-njl" secondAttribute="leading" id="o75-5K-3i6"/>
@@ -234,7 +235,6 @@
         <image name="fastorder" width="60" height="59"/>
         <image name="movie_reser" width="60" height="59"/>
         <image name="nologinpf" width="82" height="81"/>
-        <image name="phototicket" width="60" height="59"/>
         <image name="theater" width="60" height="59"/>
     </resources>
 </document>
